tests/golden/errors/missing_blank_between_decls.stderr
error[formatting]: exactly one blank line separates top-level declarations
  --> missing_blank_between_decls.kso:3:1
   3 | pub play = print (greet "kanso")
       ^
